--- a/css/home/face.css
+++ b/css/home/face.css
@@ -2,6 +2,6 @@ body{
 	background-attachment:fixed;
 	background-repeat:repeat;
 	background-position:center;
-	background-size:contain;
+	background-size:100%;
 	background-image: url("head.jpg");
 }
