--- a/css/home/face.css
+++ b/css/home/face.css
@@ -1,7 +1,7 @@
 body{	
 	background-attachment:fixed;
-	background-repeat:repeat;
+	background-repeat:no-repeat;
 	background-position:center;
-	background-size:100%;
+	background-size:cover;
 	background-image: url("head.jpg");
 }
