--- a/css/home/face.css
+++ b/css/home/face.css
@@ -1,7 +1,19 @@
 body{	
 	background-attachment:fixed;
-	background-repeat:repeat;
+	background-repeat:no-repeat;
 	background-position:center;
 	background-size:contain;
+	background-height:100%;
 	background-image: url("head.jpg");
+	margin:0;
+	padding:0;
+}
+
+.dotted{
+	background-repeat:repeat;
+	background-image: url("dot.png");
+	width:100%;
+	height:100vh;
+	z-index:1;
+	overflow:hidden;
 }
